@@ -78,13 +78,12 @@ void gdcmHeaderEntrySet::Print(std::ostream & os) {
       }              
       s << std::endl;
    }
-   os<<s.str();
 
    // List element
    guint32 lgth;
    char greltag[10];  //group element tag
  
-   std::cout << "------------ using listEntries ----------------" << std::endl; 
+   s << "------------ using listEntries ----------------" << std::endl; 
 
    char st[11];
    for (ListTag::iterator i = listEntries.begin();  
@@ -96,36 +95,38 @@ void gdcmHeaderEntrySet::Print(std::ostream & os) {
       o = (*i)->GetOffset();
       sprintf(greltag,"%04x|%04x",g,e);           
       d2 = _CreateCleanString(v);  // replace non printable characters by '.'
-      cout << greltag << " lg : ";
+      s << greltag << " lg : ";
       lgth = (*i)->GetReadLength(); 
       sprintf(st,"x(%x)",lgth);
-      std::cout.setf(ios::left);
-      std::cout << setw(10-strlen(st)) << " ";  
-      std::cout << st << " ";
-      std::cout.setf(ios::left);
-      std::cout << setw(8) << lgth; 
-      std::cout << " Off.: ";
+      s.setf(std::ios::left);
+      s << std::setw(10-strlen(st)) << " ";  
+      s << st << " ";
+      s.setf(std::ios::left);
+      s << std::setw(8) << lgth; 
+      s << " Off.: ";
       sprintf(st,"x(%x)",o); 
-      std::cout << setw(10-strlen(st)) << " ";       
-      std::cout << st << " ";
-      std::cout << setw(8) << o; 
-      std::cout << "[" << (*i)->GetVR()  << "] ";
-      std::cout.setf(ios::left);
-      std::cout << setw(66-(*i)->GetName().length()) << " ";
-      std::cout << "[" << (*i)->GetName()<< "] ";       
-      std::cout << "[" << d2 << "]";
+      s << std::setw(10-strlen(st)) << " ";       
+      s << st << " ";
+      s << std::setw(8) << o; 
+      s << "[" << (*i)->GetVR()  << "] ";
+      s.setf(std::ios::left);
+      s << std::setw(66-(*i)->GetName().length()) << " ";
+      s << "[" << (*i)->GetName()<< "] ";       
+      s << "[" << d2 << "]";
        // Display the UID value (instead of displaying the rough code)  
       if (g == 0x0002) {  // Any more to be displayed ?
          if ( (e == 0x0010) || (e == 0x0002) ) 	   
-            std::cout << "  ==>\t[" << ts->GetValue(v) << "]";   
+            s << "  ==>\t[" << ts->GetValue(v) << "]";   
       } else {
          if (g == 0x0008) {
             if ( (e == 0x0016) || (e == 0x1150)  ) 	   
-               std::cout << "  ==>\t[" << ts->GetValue(v) << "]"; 
+               s << "  ==>\t[" << ts->GetValue(v) << "]"; 
          }
       }                        
-      std::cout << std::endl;
+      s << std::endl;
    } 
+
+   os<<s.str();
 } 
 
 //-----------------------------------------------------------------------------
